--- a/dkpro/pom.xml
+++ b/dkpro/pom.xml
@@ -151,6 +151,27 @@
   		</artifactId>
   		<version>0.0.1-SNAPSHOT</version>
   	</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.10</version>
+		</dependency>
+		<dependency>
+			<groupId>edu.stanford.nlp</groupId>
+			<artifactId>stanford-corenlp</artifactId>
+			<version>1.3.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.maltparser</groupId>
+			<artifactId>maltparser</artifactId>
+			<version>1.7.1</version>
+		</dependency>
+        <dependency>
+            <groupId>org.maltparser</groupId>
+            <artifactId>maltparser</artifactId>
+            <version>1.7.1</version>
+        </dependency>
+
   </dependencies>
   <dependencyManagement>
   	<dependencies>
